--- a/src/EdFi.OdsApi.Sdk.v54/EdFi.OdsApi.Sdk.v54.nuspec
+++ b/src/EdFi.OdsApi.Sdk.v54/EdFi.OdsApi.Sdk.v54.nuspec
@@ -2,11 +2,19 @@
 <package >
   <metadata>
     <id>EdFi.OdsApi.Sdk.v54</id>
-    <version>1.0.7</version>
+    <version>1.0.0</version>
     <title>EdFi.OdsApi.Sdk.v54</title>
     <authors>Makoa Jacobsen</authors>
     <owners>Education Nexus</owners>
     <description>EdFi OdsApi SDK with base types</description>
+    <readme>README.md</readme>
     <repository type="git" url="https://github.com/ednexusdata/edfi-odsapi-sdk-v54" commit="$commit$" />
+    <dependencies>
+      <group targetFramework="net8.0" />
+    </dependencies> 
   </metadata>
+  <files>
+    <file src="bin\Release\net8.0\EdFi.OdsApi.Sdk.v54.dll" target="lib\net8.0\" />
+    <file src="README.md" target="" />
+  </files>
 </package>
