--- a/.github/workflows/package.yaml
+++ b/.github/workflows/package.yaml
@@ -61,5 +61,5 @@ jobs:
         run: dotnet nuget add source --username USERNAME --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/ednexusdata/index.json"
         working-directory: src/EdFi.OdsApi.Sdk.v54
       - name: EdFi.OdsApi.Sdk - Publish Package
-        run: dotnet nuget push "pack/EdFi.OdsApi.Sdk.v54.${{ steps.bump.outputs.newVersion }}.nupkg" --api-key ${{ secrets.GITHUB_TOKEN }} --source "github"
+        run: dotnet nuget push "pack/EdNexusData.EdFi.OdsApi.Sdk.v54.${{ steps.bump.outputs.newVersion }}.nupkg" --api-key ${{ secrets.GITHUB_TOKEN }} --source "github"
         working-directory: src/EdFi.OdsApi.Sdk.v54
