--- a/src/EdFi.OdsApi.Sdk.v54/EdFi.OdsApi.Sdk.v54.nuspec
+++ b/src/EdFi.OdsApi.Sdk.v54/EdFi.OdsApi.Sdk.v54.nuspec
@@ -10,7 +10,12 @@
     <readme>README.md</readme>
     <repository type="git" url="https://github.com/ednexusdata/edfi-odsapi-sdk-v54" commit="$commit$" />
     <dependencies>
-      <group targetFramework="net8.0" />
+      <group targetFramework="net8.0">
+        <dependency id="JsonSubTypes" version="2.0.1" />
+        <dependency id="Newtonsoft.Json" version="13.0.3" />
+        <dependency id="RestSharp" version="112.0.0" />
+        <dependency id="Polly" version="8.1.0" />
+      </group>
     </dependencies> 
   </metadata>
   <files>
